@@ -2,6 +2,7 @@
  - Add 'ignore_data_errors' parameter.
  - Add support for cze/slo book editions in description.
  - Add tests for field 008 dates.
+ - Ignore MARC validity errors in tests.
  - Rewrite processing of covers.
  - Rewrite processing of publication date to 008 field.
 
